--- a/docker-compose-testing.yaml
+++ b/docker-compose-testing.yaml
@@ -1,27 +1,27 @@
 services:
-  app:
+  app-test:
     build: ./app
-    container_name: web-app
+    container_name: web-app-test
     hostname: web-app
     volumes: ["./app/src:/appcode"]
     ports:
-      - 8501:8501
+      - 8502:8501
 
-  api:
+  api-test:
     build: ./api
-    container_name: web-api
+    container_name: web-api-test
     hostname: web-api
     volumes: ["./api:/apicode"]
     ports:
-      - 4000:4000
+      - 4001:4000
 
-  db:
+  db-test:
     env_file:
       - ./api/.env
     image: mysql:9
-    container_name: mysql_db
+    container_name: mysql-db-test
     hostname: db
     volumes:
       - ./database-files:/docker-entrypoint-initdb.d/:ro
     ports:
-      - 3200:3306
+      - 3201:3306
